--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.18.1",
     "react": "16.0.0-alpha.6",
     "react-native": "^0.43.4",
+    "react-native-root-modal": "^1.1.1",
     "react-navigation": "^1.0.0-beta.9"
   }
 }
